Bug 497051 - Fakon fails to print to CUPS printer
Summary: Fakon fails to print to CUPS printer
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-04 20:01 UTC by Doug Hilton
Modified: 2024-12-04 20:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Doug Hilton 2024-12-04 20:01:20 UTC
SUMMARY

Selecting Print from the Falkon menu opens a print dialog box. Printing to a printer (not a file) does not submit a job to CUPS and the dialog closes. Printing to a file works. Printing to a CUPS Printer does not work. Verified by another Gentoo user.

STEPS TO REPRODUCE
1.  Falkon -> Print -> Print (to a CUPS printer)

OBSERVED RESULT

Print dialog closes. No CUPS job is submitted.

EXPECTED RESULT

Print the page.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma:  Gentoo Linux 2.17
KDE Plasma Version:  6.1.5
KDE Frameworks Version:  6.7.0
Qt Version:  6.7.3

ADDITIONAL INFORMATION

Verified by another Gentoo user. Problem explained on libera.chat / #falkon
Comment 1 Juraj 2024-12-04 20:40:53 UTC
Git commit cbf47b0625c9b67b3608e24600273693bd59462a by Juraj Oravec.
Committed on 04/12/2024 at 20:39.
Pushed by jurajo into branch 'release/24.12'.

Fix printing to printer other than PDF printer
FIXED-IN: 24.12

Chery picked from: eaa807023517e1d62dae41f9b1cdd93806d77d64

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +14   -8    src/lib/webengine/webview.cpp
M  +4    -0    src/lib/webengine/webview.h

https://invent.kde.org/network/falkon/-/commit/cbf47b0625c9b67b3608e24600273693bd59462a