Fix printing to printer other than PDF printer

BUG: 497051
FIXED-IN: 24.12

Chery picked from: eaa807023517e1d62dae41f9b1cdd93806d77d64

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>